Ajuestes no flexslider e espaço entre sections
Ajuestes no flexslider e espaço entre sections

--- a/themes/yg_sports/css/skins/red/template.css
+++ b/themes/yg_sports/css/skins/red/template.css
@@ -400,7 +400,7 @@ header .intro-text {
 }
 /* Upcoming Section */
 #upcoming {
-  padding: 70px 0 90px;
+  /*padding: 70px 0 90px;*/
   background: #fff;
 }
 #upcoming .section-title h2 {
@@ -449,7 +449,7 @@ header .intro-text {
 }
 /* About Section */
 #about {
-  padding: 150px 0;
+  /*padding: 150px 0;*/
   background: #cd2122;
 }
 #about h3 {
@@ -491,7 +491,7 @@ header .intro-text {
 }
 /* Fixtures Section */
 #fixtures {
-  padding: 60px 20px 80px;
+  /*padding: 60px 20px 80px;*/
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -510,7 +510,7 @@ header .intro-text {
 }
 /* Team Section */
 #team {
-  padding: 60px 20px;
+  /*padding: 60px 20px;*/
     background: #fff;
   min-height: 478px;
 }
@@ -537,7 +537,7 @@ header .intro-text {
 }
 /* Gallery Section */
 #gallery {
-  padding: 60px 0px 90px;
+  /*padding: 60px 0px 90px;*/
   background: #cd2122;
 }
 #gallery h2 {
@@ -616,8 +616,8 @@ table td {
 /* Blog Section */
 #blog {
   background: #fff;
-  padding: 60px 0;
-}s
+  /*padding: 60px 0;*/
+}
 #blog h3 {
   font-size: 22px;
   margin: 0 0 20px 0;
@@ -665,7 +665,7 @@ table td {
 }
 /* News Section */
 #news {
-  padding: 180px 0;
+  /*padding: 180px 0;*/
   background-size: cover;
 }
 #news h2 {
@@ -716,7 +716,7 @@ table td {
 }
 /* Contact Section */
 #contact {
-  padding: 100px 0 60px 0;
+  /*padding: 100px 0 60px 0;*/
   color: #fff;
   background: #cd2122;
 }
@@ -836,7 +836,7 @@ color: #bebebe;
 /* Footer Section*/
 #footer {
   background: #000;
-  padding: 30px 0px 20px;
+  /*padding: 30px 0px 20px;*/
 }
 #footer p {
   color: #fff;
