--- a/themes/yg_sports/css/skins/light_blue/template.css
+++ b/themes/yg_sports/css/skins/light_blue/template.css
@@ -398,7 +398,7 @@ header .intro-text {
 }
 /* Upcoming Section */
 #upcoming {
-  padding: 70px 0 90px;
+  /*padding: 70px 0 90px;*/
   background: #fff;
 }
 #upcoming .section-title h2 {
@@ -445,7 +445,7 @@ header .intro-text {
 }
 /* About Section */
 #about {
-  padding: 150px 0;
+  /*padding: 150px 0;*/
   background: #238cc8;
 }
 #about h3 {
@@ -487,7 +487,7 @@ header .intro-text {
 }
 /* Fixtures Section */
 #fixtures {
-  padding: 60px 20px 80px;
+  /*padding: 60px 20px 80px;*/
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -506,7 +506,7 @@ header .intro-text {
 }
 /* Team Section */
 #team {
-  padding: 60px 20px;
+  /*padding: 60px 20px;*/
     background: #fff;
   min-height: 478px;
 }
@@ -533,7 +533,7 @@ header .intro-text {
 }
 /* Gallery Section */
 #gallery {
-  padding: 60px 0px 90px;
+  /*padding: 60px 0px 90px;*/
   background: #238cc8;
 }
 #gallery h2 {
@@ -613,7 +613,7 @@ table td {
 #blog {
   background: #fff;
   padding: 60px 0;
-}s
+}
 #blog h3 {
   font-size: 22px;
   margin: 0 0 20px 0;
@@ -661,7 +661,7 @@ table td {
 }
 /* News Section */
 #news {
-  padding: 180px 0;
+  /*padding: 180px 0;*/
   background-size: cover;
 }
 #news h2 {
@@ -712,7 +712,7 @@ table td {
 }
 /* Contact Section */
 #contact {
-  padding: 100px 0 60px 0;
+  /*padding: 100px 0 60px 0;*/
   color: #fff;
   background: #238cc8;
 }
@@ -832,7 +832,7 @@ color: #bebebe;
 /* Footer Section*/
 #footer {
   background: #000;
-  padding: 30px 0px 20px;
+  /*padding: 30px 0px 20px;*/
 }
 #footer p {
   color: #fff;
