Retira margin do flexslider
Retira margin do flexslider

--- a/themes/yg_sports/css/flexslider_img.css
+++ b/themes/yg_sports/css/flexslider_img.css
@@ -8,6 +8,10 @@
   display: block;
 }
 
+.flexslider {
+    margin: 0;
+}
+
 .flexslider .flex-direction-nav a.flex-prev,
 .flexslider .flex-direction-nav a.flex-next {
     display: block;
