--- a/themes/yg_sports/css/style.css
+++ b/themes/yg_sports/css/style.css
@@ -1319,8 +1319,18 @@ ul.other-blog-scr li a {
   height: auto;
 }
 
+#upcoming .matches .matche-image {
+    display: block;
+    min-height: 165px;
+}
+
+#upcoming .matches h2 {
+    /*padding: 30px;*/
+}
+
+
 #upcoming .matches img {
-    padding: 30px;
+    padding: 15px 30px 15px 30px;
 }
 
 #upcoming .matches {
