--- a/themes/yg_sports/templates/views/views-view--upcoming_matches--block-1.html.twig
+++ b/themes/yg_sports/templates/views/views-view--upcoming_matches--block-1.html.twig
@@ -9,10 +9,12 @@
           {% for result in view.result %}
             <div class="col-md-2 col-sm-4 col-xs-12 matches">
             <span>VS</span>
-            <img src="{{ file_url(view.field.uri.value(view.result[loop.index-1])) }}" class="img-responsive" alt="{{ view.field.title.value(view.result[loop.index-1]) }}"/>
-              <h2>{{ view.field.title.value(view.result[loop.index-1]) }}</h2>
-              <h4>{{ view.field.field_match_date.value(view.result[loop.index-1]) | date("d/m/Y") | upper  }}</h4>
+            <div class="matche-image">
+				<img src="{{ file_url(view.field.uri.value(view.result[loop.index-1])) }}" class="img-responsive" alt="{{ view.field.title.value(view.result[loop.index-1]) }}"/>
             </div>
+			<h2>{{ view.field.title.value(view.result[loop.index-1]) }}</h2>
+			<h4>{{ view.field.field_match_date.value(view.result[loop.index-1]) | date("d/m/Y") | upper  }}</h4>  
+			</div>
           {% endfor %}
         </div>
       </div>
