--- a/themes/yg_sports/templates/page.html.twig
+++ b/themes/yg_sports/templates/page.html.twig
@@ -56,7 +56,28 @@
  * @see html.html.twig
  */
 #}
-<nav id="menu" class="navbar navbar-default navbar-fixed-top">
+{% if logged_in %}
+{%  if page.top_left or page.top_center or page.top_right %}
+    <div id="barra">
+		<div class="col-md-3 top-left">
+		   {% if page.top_left %}
+				{{ page.top_left }}
+		   {% endif %}
+		</div>	
+		<div class="col-md-6 top-center">
+		   {% if page.top_center %}
+				{{ page.top_center }}
+		   {% endif %}
+		</div>	
+		<div class="col-md-3 top-right">
+		   {% if page.top_right %}
+				{{ page.top_right }}
+		   {% endif %}
+		</div>	
+	 </div>	
+{%  endif %}
+{% endif %}
+<nav id="menu" class="navbar navbar-default">
   <div class="container">
 {% if page.navigation or page.navigation_collapsible %}
   {% block navbar %}
@@ -184,7 +205,7 @@
 </div> -->
 <div id="footer">
   <div class="container text-center">
-    <p>&copy; 2017. All Rights Reserved.<br />Theme Powered By <a href="http://www.youngglobes.com" target="_blank">Young Globes</a></p>
+    <p>&copy; 2021. All Rights Reserved.</p>
   </div>
 </div>
 <a id="back-to-top" href="#home" class="btn btn-custom btn-lg page-scroll" role="button" title="Go To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
