Inibir troca de skin nao autenticado
Inibir troca de skin nao autenticado

--- a/themes/yg_sports/css/skins/blue/template.css
+++ b/themes/yg_sports/css/skins/blue/template.css
@@ -445,10 +445,16 @@ header .intro-text {
   margin: 0px;
   font-weight: 300;
 }
+
+/* Barra topo */
+#barra {
+  background-color: #374f99;	
+}
+
 /* About Section */
 #about, .about {
   /*padding: 150px 0;*/
-  background: #374f99;
+  background-color: #374f99;
 }
 #about h3 {
   font-size: 20px;
