--- a/themes/yg_sports/css/skins/green/template.css
+++ b/themes/yg_sports/css/skins/green/template.css
@@ -445,10 +445,15 @@ header .intro-text {
   margin: 0px;
   font-weight: 300;
 }
+/* Barra topo */
+#barra {
+  background-color: #039673;	
+}
+
 /* About Section */
 #about, .about {
   /*padding: 150px 0;*/
-  background: #039673;
+  background-color: #039673;
 }
 #about h3 {
   font-size: 20px;
