--- a/themes/yg_sports/css/skins/pink/template.css
+++ b/themes/yg_sports/css/skins/pink/template.css
@@ -444,10 +444,14 @@ header .intro-text {
   margin: 0px;
   font-weight: 300;
 }
+/* Barra topo */
+#barra {
+  background-color: #d91897;	
+}
 /* About Section */
 #about, .about {
   /*padding: 150px 0;*/
-  background: #d91897;
+  background-color: #d91897;
 }
 #about h3 {
   font-size: 20px;
