--- a/themes/yg_sports/css/skins/red/template.css
+++ b/themes/yg_sports/css/skins/red/template.css
@@ -447,12 +447,17 @@ header .intro-text {
   margin: 0px;
   font-weight: 300;
 }
+/* Barra topo */
+#barra {
+  background-color: #cd2122;	
+}
 /* About Section */
 #about,
 .about {
   /*padding: 150px 0;*/
-  background: #cd2122;
+  background-color: #cd2122
 }
+
 #about h3,
 .about .field--name-field-sub-title- {
   font-size: 20px;
