--- a/themes/yg_sports/css/skins/turquoise/template.css
+++ b/themes/yg_sports/css/skins/turquoise/template.css
@@ -445,10 +445,14 @@ header .intro-text {
   margin: 0px;
   font-weight: 300;
 }
+/* Barra topo */
+#barra {
+  background-color: #1bcdca;	
+}
 /* About Section */
 #about, .about {
   /*padding: 150px 0;*/
-  background: #1bcdca;
+  background-color: #1bcdca;
 }
 #about h3 {
   font-size: 20px;
