--- a/themes/yg_sports/css/skins/red/template.css
+++ b/themes/yg_sports/css/skins/red/template.css
@@ -459,7 +459,7 @@ header .intro-text {
 }
 
 #about h3,
-.about .field--name-field-sub-title- {
+.about h3 {
   font-size: 20px;
   margin: 0 0 5px 0;
   color: #fff;
@@ -478,7 +478,8 @@ header .intro-text {
   color: #fff;
 }
 
-#about p a {
+#about p a, .about p a,
+#about p a:hover, .about p a:hover {
   color: #fff;
 }
 
@@ -607,24 +608,6 @@ header .intro-text {
 table {
     border-collapse: separate;
     border-padding: 1em;
-}
-table th {
-  font-family: 'Oswald', sans-serif;
-  color: #fff;
-  font-size: 24px;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: 300;
-}
-table td {
-  font-family: 'Oswald', sans-serif;
-  font-size: 22px;
-  color: #fff;
-  margin: 0px;
-  font-weight: 300;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 25px 0px !important;
 }
 /* Blog Section */
 #blog {
